--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,6 +72,7 @@ html {
   background-color: var(--bg-react-select-control) !important;
   border-color: var(--react-select-border) !important ;
   cursor: pointer !important;
+  height: 42px;
 }
 
 .react-select__control--is-focused {
