update style scroll-margin-top

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,11 @@
 @tailwind utilities;
 
 html {
-  scroll-behavior: smooth;
-  scroll-padding-top: 2rem;
+  scroll-behavior: smooth !important;
+  /* setting for all */
+  /* scroll-padding-top: 4rem; */
+  /* setting for specific target */
+  /* <section id='section-books' className='scroll-mt-20 scroll-pt-20'> */
 }
 
 body {
